After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669461 - Epy does not longer load IP:port addresses
Epy does not longer load IP:port addresses
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on: 613756 669548
Blocks:
 
 
Reported: 2012-02-06 10:54 UTC by Sergio Villar
Modified: 2012-02-23 10:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-embed-utils: "ip:host" addresses no longer loading (1.20 KB, patch)
2012-02-06 11:19 UTC, Sergio Villar
none Details | Review

Description Sergio Villar 2012-02-06 10:54:01 UTC
I want to browse a local service I have in my network, let's say it's available through port 7500 at 192.168.10.10. When I type 192.168.10.10:7500 in the URL bar I'd expect epy to transform it in http://192.168.10.10:7500 and start loading it as it used to do, but it does not do anything.
Comment 1 Sergio Villar 2012-02-06 11:19:16 UTC
Created attachment 206873 [details] [review]
ephy-embed-utils: "ip:host" addresses no longer loading

Epy should consider "IP:port" like addresses as http://IP:port URLs. The
current code would parse the IP as the URL scheme and the port as the URL
path.
Comment 2 Sergio Villar 2012-02-06 11:20:16 UTC
As the comment says the best way to fix this would be likely to check if we have a handler for the scheme reported by libsoup. Is there any machinery inside epy to check that?
Comment 3 Xan Lopez 2012-02-23 10:57:13 UTC
I have committed a slightly different version of this plus tests for it in tests/ephy-embed-utils-test.c. Thanks.