ephy-embed-utils: fix loading of <IP address>:<port> URIs

https://bugzilla.gnome.org/show_bug.cgi?id=669461